working sync between pins and list

--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "redux": "^3.0.4",
     "redux-burger-menu": "0.0.1",
     "redux-form": "^6.0.5",
+    "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0"
   }
 }
