--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.14.0",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "moment": "^2.15.1",
     "nodemon": "^1.10.2",
     "radium": "^0.18.1",
     "react": "^0.14.3",
