--- a/server/package.json
+++ b/server/package.json
@@ -7,22 +7,25 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
+  "engines": {
+    "node": "6.9.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.5.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "fb": "^1.0.2",
+    "googlemaps": "^1.11.1",
     "jwt-simple": "^0.5.0",
     "mongoose": "^4.6.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0",
-    "async": "^1.5.2",
-    "googlemaps": "^1.4.0",
-    "fb": "1.0.2",
     "q": "^1.4.1"
   }
 }
